CSS/CULTURE/culture.css
/* ... */
@media (max-width: 1100px) {
    .short-intro h1{
        font-size: 50px;
        padding-bottom: 15px;
    }
    
    .short-intro h3{
        font-size: 30px;
        padding-bottom: 10px;
    }

    .short-intro p{
        font-size: 24px;
    }
}

@media (max-width: 900px) {
    .short-intro h1{
        font-size: 47px;
        padding-bottom: 15px;
    }
    
    .short-intro h3{
        font-size: 27px;
        padding-bottom: 10px;
    }

    .short-intro p{
        font-size: 22px;
    }
}

@media (max-width: 775px) {
    .short-intro h1{
        font-size: 44px;
        padding-bottom: 17px;
    }
    
    .short-intro h3{
        font-size: 24px;
        padding-bottom: 10px;
    }

    .short-intro p{
        font-size: 19px;
    }

    .footer-container{
        width: 100%;
    }
}

@media(max-width:650px){
    .short-intro h1{
        font-size: 40px;
        padding-bottom: 20px;
    }
    
    .short-intro h3{
        font-size: 22px;
        padding-bottom: 12px;
    }

    .short-intro p{
        font-size: 17px;
    }

    .footer-container{
        /* border-top: 2px solid white; */
        width:80%;
        margin:auto;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .footer-content{
        width: 100%;
    }

    .Contact{
        padding-top: 20px;
        padding-bottom: 20px;
        border-right:0px;
        /* border-top:2px solid #fff; */
    }

    /* .Contact h3{
        padding-bottom: 10px;
    } */
    
    .Quick-links{
        padding-top: 20px;
        padding-bottom: 20px;
        border-right: 0px;
        border-top: 2px solid #fff;
        border-bottom: 2px solid #fff;
    }

    /* .Social{
        padding-top: 20px;
        padding-bottom: 20px;
    } */

    .bottom-bar{
        border-top: 2px solid #ffffff;
    }
}

@media (max-width: 520px) {
    .short-intro h1{
        font-size: 32px;
        padding-bottom: 25px;
    }
    
    .short-intro h3{
        font-size: 20px;
        padding-bottom: 15px;
    }

    .short-intro p{
        font-size: 15px;
    }
}

